[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/map_assets/runway.png" type="Texture" id=1]
[ext_resource path="res://Ships2/Plane Launchers/Airbase.gd" type="Script" id=2]
[ext_resource path="res://Squad/PlaneSquadron/PlaneSquadron.tscn" type="PackedScene" id=3]
[ext_resource path="res://Miscellaneous/Detection Area.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/themes/LaunchBar.tres" type="StyleBox" id=5]
[ext_resource path="res://Ships2/Planes/Plane.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65.466, 23.816 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="AirbaseArea" type="KinematicBody2D"]
pause_mode = 1
position = Vector2( 553, 329 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
detector_scene = ExtResource( 4 )
PlaneSquadScene = ExtResource( 3 )
PlaneBoidScene = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.5
margin_top = -25.5
margin_right = 64.5
margin_bottom = 25.5
mouse_filter = 2
color = Color( 0.439216, 0.439216, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.402802, 4.41475 )
scale = Vector2( 2, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.127563, -0.181458 )
shape = SubResource( 1 )

[node name="LaunchBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 69.0
margin_top = 25.0
margin_right = 117.0
margin_bottom = 37.0
rect_rotation = 270.0
custom_styles/fg = ExtResource( 5 )
custom_styles/bg = SubResource( 2 )
max_value = 5.0
value = 2.0
percent_visible = false

[node name="LaunchTimer" type="Timer" parent="."]

[node name="MouseClickHitbox" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="MouseClickHitbox"]
position = Vector2( 4.76837e-07, -4.76837e-07 )
shape = SubResource( 1 )

[node name="ScoutPlaneTriangle" type="Polygon2D" parent="."]
visible = false
scale = Vector2( 2, 2 )
color = Color( 0.670588, 0.113725, 0.65098, 1 )
polygon = PoolVector2Array( 0, 0, 183, -225, 61, -251, -79, -222, -164, -120, -202, 8 )

[node name="FighterPatrolCircle" type="Polygon2D" parent="."]
position = Vector2( 16, 71 )
scale = Vector2( 1.5, 1.5 )
polygon = PoolVector2Array( 226.667, -94.6667, 163, -195, 69, -253, -94, -258, -188, -202, -238, -57.3333, -182, 70, -67.3333, 139.333, 106.667, 134, 182, 97.3333, 224, 13.3333 )

[connection signal="timeout" from="LaunchTimer" to="." method="_on_LaunchTimer_timeout"]
[connection signal="input_event" from="MouseClickHitbox" to="." method="_input_event"]
